# MLT_IRaE_EuroScope_2025

./: .gitignore  README.md  pyproject.toml
Data/: doc_titles_v2.csv  documents_en.csv  evaluation_set.json  stats_en.json  stats_en_v2.csv
Data/results/: dense_results.json  hybrid_results.json
Results/: ndcg_scores.json  sparse_results.json
Scripts/: data_loader.py  data_viz.py  database.py  evaluation.py  indexer.py  preprocessors.py  retrieval.py  retriever.py  set_device.py
scripts/: create_database.py  data_loader.py  dense_retrieval.py  evaluation.py  indexer.py  indexing.py  preprocessors.py  reranker.py  retrieval.py  retrieval_eval.py  retriever.py  run_code.py  set_device.py
